platform/networking/istio/base/destination-rules/frontend-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-dr
spec:
  host: rentalapp-frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
