platform/networking/istio/base/destination-rules/notification-service-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: notification-service-dr
spec:
  host: notification-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
